Updated: package manager conf files

--- a/bower.json
+++ b/bower.json
@@ -1,42 +1,41 @@
 {
-  "name": "bucks.js",
-  "version": "0.8.2",
-  "keywords": [
-    "browser",
-    "node",
-    "async"
-  ],
-  "readmeFilename": "README.md",
-  "main": [
-    "bucks.js",
-    "bucks.min.js"
-  ],
-  "ignore": [
-    "**/.*",
-    "AUTHORS",
-    "Changelog",
-    "LICENSE",
-    "Makefile",
-    "README.md",
-    "bower.json",
-    "build.sh",
-    "component.json",
-    "node_modules",
-    "package.json",
-    "setver",
-    "spec",
-    "test"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/CyberAgent/bucks.js.git"
-  },
-  "homepage": "https://github.com/CyberAgent/bucks.js.git",
-  "authors": [
-    "CyberAgent, Inc <npm@cyberagent.co.jp>",
-    "Kazuma Mishimagi <mishimagi_kazuma@cyberagnet.co.jp>"
-  ],
-  "license": "MIT",
-  "dependencies": {
-  }
+    "name": "bucks.js",
+    "version": "0.8.4",
+    "keywords": [
+        "browser",
+        "node",
+        "async"
+    ],
+    "readmeFilename": "README.md",
+    "main": [
+        "bucks.js",
+        "bucks.min.js"
+    ],
+    "ignore": [
+        "**/.*",
+        "AUTHORS",
+        "Changelog",
+        "LICENSE",
+        "Makefile",
+        "README.md",
+        "bower.json",
+        "build.sh",
+        "component.json",
+        "node_modules",
+        "package.json",
+        "setver",
+        "spec",
+        "test"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/CyberAgent/bucks.js.git"
+    },
+    "homepage": "https://github.com/CyberAgent/bucks.js.git",
+    "authors": [
+        "CyberAgent, Inc <npm@cyberagent.co.jp>",
+        "Kazuma Mishimagi <mishimagi_kazuma@cyberagnet.co.jp>"
+    ],
+    "license": "MIT",
+    "dependencies": {}
 }
